[package]
name = "compressed_tree"
description = "Experimental compressed tree storage for FluidFramework's tree in WASM."
readme = "../README.md"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/CraigMacomber/Compressed-Tree"
license = "MIT"
categories = ["web-programming", "no-std", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
rand_pcg = "0.3.1"
rand_core = "0.6.3"
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]