[package]
name = "compressed_tree"
description = "Experimental compressed tree storage for FluidFramework's tree in WASM."
readme = "../README.md"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/CraigMacomber/Compressed-Tree"
license = "MIT"
categories = ["web-programming", "no-std", "wasm"]
authors = ["Craig Macomber <Craig.Macomber@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
im-rc = "15.0.0"
num-integer = "0.1.44"
rand = "0.8.5"
ahash = "0.8.0"
derive_more = "0.99.17"
lazy_static = "1.4"
owning_ref = "0.4.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
rand_pcg = "0.3.1"
rand_core = "0.6.3"
rand = "0.8.5"
criterion = "0.3.5"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dependencies.getrandom]
version = "0.2.7"
features = [ "js" ]


[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
# debug = true
# opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']