[package]
name = "compressed_tree_example"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/CraigMacomber/Compressed-Tree"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies.compressed_tree]
path = "../compressed_tree"
